--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class=" section section0 active background0" id="section0">
       <div class="circle"></div>
       <div class="circle2"></div>
-      <img class="section0bg hide-for-small-only hide-for-medium-only" src="pics/QINY74752.png">
+      <img class="section0bg hide-for-small-only hide-for-medium-only" style="height:100vh;" src="pics/QINY74752.png">
       <div class="grid-x">
             <div class="show-for-small-only small-12 cell">
               <img src="pics/Logo.png">
@@ -57,7 +57,7 @@
         </div>
       </div>
       <div class="grid-x">
-        <div class="medium-6 small-12 medium-offset-1 sub cell">
+        <div class="medium-6 small-12 medium-offset-1 cell">
           <h1>...an Italian Adventure</h1>
         </div>
       </div>
@@ -68,7 +68,7 @@
 
     <div class="grid-container">
       <div class="grid-x">
-        <div class="large-5 medium-8 hide-for-small-only subsub small-12 cell">
+        <div class="large-5 medium-8 hide-for-small-only small-12 cell" style="padding-top:2rem;">
           <p>A timeline of events captured on a trip to Italy in July of 2019. These images, recollections and stories highlight the cultures and customs from four different regions throughout Italy. All spanning a 10 day period with hundreds of miles travled, displayed in chronological order.</p>
         </div>
       </div>
